--- a/app/src/main/res/layout/calendar_row.xml
+++ b/app/src/main/res/layout/calendar_row.xml
@@ -4,6 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="60dp"
     android:layout_margin="5dp"
+    android:id="@+id/calendar_cv"
     android:background="@android:color/darker_gray"
     android:elevation="5dp"
     app:cardCornerRadius="5dp">
