--- a/app/src/main/res/layout/find_intern_row.xml
+++ b/app/src/main/res/layout/find_intern_row.xml
@@ -154,25 +154,25 @@
 
        <ImageView
             android:id="@+id/view_pdf_iv"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="25dp"
+            android:layout_height="25dp"
             android:layout_alignParentRight="true"
             android:layout_alignParentTop="true"
             android:layout_centerVertical="true"
             android:layout_marginRight="5dp"
             android:layout_marginTop="5dp"
-            android:background="@drawable/send_icon_32" />
+            android:background="@drawable/view" />
 
         <ImageView
             android:id="@+id/send_mail_iv"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="25dp"
+            android:layout_height="25dp"
             android:layout_alignParentRight="true"
             android:layout_alignParentTop="true"
             android:layout_centerVertical="true"
             android:layout_marginRight="5dp"
-            android:layout_marginTop="55dp"
-            android:background="@drawable/send_icon_32" />
+            android:layout_marginTop="35dp"
+            android:background="@drawable/email" />
 
     </RelativeLayout>
 </android.support.v7.widget.CardView>
